[package]
name = "thippy-node"
version = "0.1.0"
authors = ["Annie Lai <admin@parity.io>"]
license = "GPL-3.0-only"
description = "A node implementation for Thippy, a Substrate parachain for smart contracts."
homepage = "https://github.com/ng8eke/thippy"
repository = "https://github.com/ng8eke/thippy"
build = "build.rs"
edition = "2021"
rust-version = "1.56.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/ng8eke/substrate', branch = "master" }

[[bin]]
name = 'thippy'
path = 'src/main.rs'

[features]
runtime-benchmarks = ['thippy-runtime/runtime-benchmarks']
contracts-unstable-interface = ['thippy-runtime/contracts-unstable-interface']

[dependencies]
derive_more = '0.99.2'
log = '0.4.14'
codec = { package = 'parity-scale-codec', version = '2.0.0' }
structopt = '0.3.8'
serde = { version = '1.0.119', features = ['derive'] }
hex-literal = "0.3.1"

# RPC related Dependencies
jsonrpc-core = '18.0.0'

# Local Dependencies
thippy-runtime = { path = '../runtime' }

# Substrate Dependencies
frame-benchmarking = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
frame-benchmarking-cli = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
try-runtime-cli = { git = "https://github.com/ng8eke/substrate", branch = "master" }

pallet-transaction-payment-rpc = { git = 'https://github.com/ng8eke/substrate', branch = "master" }

substrate-frame-rpc-system = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
substrate-prometheus-endpoint = { git = "https://github.com/ng8eke/substrate", branch = "master" }

## Substrate Client Dependencies
sc-basic-authorship = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sc-chain-spec = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sc-cli = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sc-client-api = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sc-consensus = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sc-executor = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sc-network = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sc-keystore = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sc-rpc = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sc-rpc-api = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sc-service = { git = 'https://github.com/ng8eke/substrate', features = ['wasmtime'] , branch = "master" }
sc-telemetry = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sc-transaction-pool = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sc-transaction-pool-api = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sc-tracing = { git = 'https://github.com/ng8eke/substrate', branch = "master" }

## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sp-block-builder = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sp-blockchain = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sp-consensus = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sp-consensus-aura = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sp-core = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sp-inherents = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sp-keystore = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sp-offchain = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sp-runtime = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sp-session = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sp-timestamp = { git = 'https://github.com/ng8eke/substrate', branch = "master" }
sp-transaction-pool = { git = 'https://github.com/ng8eke/substrate', branch = "master" }

# Cumulus dependencies
cumulus-client-consensus-aura = { git = 'https://github.com/ng8eke/cumulus', branch = "master" }
cumulus-client-consensus-common = { git = 'https://github.com/ng8eke/cumulus', branch = "master" }
cumulus-client-collator = { git = 'https://github.com/ng8eke/cumulus', branch = "master" }
cumulus-client-cli = { git = 'https://github.com/ng8eke/cumulus', branch = "master" }
cumulus-client-network = { git = 'https://github.com/ng8eke/cumulus', branch = "master" }
cumulus-client-service = { git = 'https://github.com/ng8eke/cumulus', branch = "master" }
cumulus-primitives-core = { git = 'https://github.com/ng8eke/cumulus', branch = "master" }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/ng8eke/cumulus', branch = "master" }
cumulus-relay-chain-interface = { git = 'https://github.com/ng8eke/cumulus', branch = "master" }
cumulus-relay-chain-local = { git = 'https://github.com/ng8eke/cumulus', branch = "master" }

# Polkadot dependencies
polkadot-cli = { git = 'https://github.com/ng8eke/polkadot', branch = "master" }
polkadot-parachain = { git = 'https://github.com/ng8eke/polkadot', branch = "master" }
polkadot-primitives = { git = 'https://github.com/ng8eke/polkadot', branch = "master" }
polkadot-service = { git = 'https://github.com/ng8eke/polkadot', branch = "master" }
polkadot-test-service = { git = 'https://github.com/ng8eke/polkadot', branch = "master" }

# Contracts specific packages
pallet-contracts-rpc = { git = "https://github.com/ng8eke/substrate", branch = "master" }
